Left hand search box too wide, fixes #11

--- a/static/style.css
+++ b/static/style.css
@@ -399,3 +399,7 @@ code { font-family: monospace; }
 .pager a, .pager strong {
     padding-left: 6px;
 }
+
+.search-bar input[type="text"], .search-bar select  {
+    width: 160px;
+}
